# app-boilerplate

./: .gitignore  .pre-commit-config.yaml  APP_SPECIFICATION.md  CHANGELOG.md  LICENSE.md  Makefile  README.md  auto-comment.yml  build_and_load_nanosp.sh  configure_bolos.sh  ledger_app.toml  ledger_app_manifest.json
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/linux/: devcontainer.json  init.sh
.devcontainer/mac/: devcontainer.json  init.sh
.devcontainer/windows/: devcontainer.json
.doxygen/: Doxyfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: app_compliance.yml  build_and_functional_tests.yml  callable_swap_tests.yml  cflite_batch.yml  cflite_cron.yml  cflite_pr.yml  check_icons.yml  ci-client.yml  ci-workflow.yml  client-checks.yml  clusterfuzzlite.yml  codecov-workflow.yml  codeql-analysis.yml  codeql-workflow.yml  codeql_checks.yml  coding_style_checks.yml  documentation-workflow.yml  documentation_generation.yml  functional_tests.yml  guidelines_enforcer.yml  lint-workflow.yml  misspellings_checks.yml  python_client_checks.yml  reusable_build_and_functional_tests.yml  reusable_swap_ci_workflow.yml  swap_ci_workflow.yml  swap_tests.yml  test.yml  unit_tests.yml
doc/: APDU.md  COMMANDS.md  PROTOCOL.md  README.md  SPEC.md  TRANSACTION.md
fuzzing/: CMakeLists.txt  README.md  fuzz_dispatcher.c  fuzz_tx_parser.c  fuzz_tx_parser.cc  local_run.sh
fuzzing/extra/: TxParser.cmake
fuzzing/harness/: fuzz_dispatcher.c  fuzz_tx_parser.c
fuzzing/macros/: add_macros.txt  exclude_macros.txt  extract_macros.py  generate_macros.sh
fuzzing/macros/src/: Dockerfile  script.sh
fuzzing/mock/: mocks.c  mocks.h
scripts/: build.ps1  build.sh  build_and_load.sh  build_setup.sh  load.ps1  load.sh  load_setup.sh  run_all_tests.sh  run_static_analysis.sh  run_tests.ps1
sdk/: io.c  nbgl_sync.c  nbgl_sync.h  nbgl_wrapper.c  nbgl_wrapper.h
sdk_lib_nbgl/include/: nbgl_fonts.h  nbgl_layout.h  nbgl_obj.h  nbgl_step.h
sdk_lib_nbgl/src/: nbgl_buttons.c  nbgl_fonts_lns.c  nbgl_step.c  nbgl_step_lns.c  nbgl_use_case_nanos.c
sdk_lib_ux_stax/: ux.c  ux.h
sdk_patch/: os_io.h  os_io_seproxyhal.c  os_io_seproxyhal.h  os_io_task.c
sdk_patch/lib_ble/include/: ble_cmd.h  ble_ledger.h  ble_ledger_profile_apdu.h  ble_ledger_types.h  ble_types.h
sdk_patch/lib_ble/src/: ble_cmd.c  ble_ledger.c  ble_ledger_profile_apdu.c
sdk_patch/lib_usb/include/: usbd_conf.h  usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_desc.h  usbd_ioreq.h  usbd_ledger.h  usbd_ledger_cdc.h  usbd_ledger_hid.h  usbd_ledger_hid_kbd.h  usbd_ledger_hid_u2f.h  usbd_ledger_types.h  usbd_ledger_webusb.h
sdk_patch/lib_usb/src/: usbd_conf.c  usbd_core.c  usbd_ctlreq.c  usbd_desc.c  usbd_ioreq.c  usbd_ledger.c  usbd_ledger_cdc.c  usbd_ledger_hid.c  usbd_ledger_hid_kbd.c  usbd_ledger_webusb.c
sdk_patch/protocol/include/: ledger_protocol.h
sdk_patch/protocol/src/: ledger_protocol.c
src/: address.c  address.h  app_main.c  app_storage_data.h  constants.h  context.c  context.h  crypto.c  crypto.h  dispatcher.c  dispatcher.h  globals.h  glyphs.c  glyphs.h  io.c  io.h  main.c  nvram_data.h  offsets.h  sw.h  types.h
src/apdu/: dispatcher.c  dispatcher.h  parser.c  parser.h
src/cdc_mgmt/: cdc_mgmt.c  cdc_mgmt.h
src/common/: base58.c  base58.h  bip32.c  bip32.h  buffer.c  buffer.h  format.c  format.h  macros.h  read.h  varint.h  write.h
src/handler/: bench.c  bench.h  get_app_name.c  get_app_name.h  get_public_key.c  get_public_key.h  get_version.c  get_version.h  nbgl_test_review.c  nbgl_tests.h  provide_token_info.c  provide_token_info.h  sign_tx.c  sign_tx.h
src/handlers/: get_app_name.c  get_app_name.h  get_version.c  get_version.h
src/helper/: send_reponse.c  send_response.h
src/swap/: handle_check_address.c  handle_get_printable_amount.c  handle_swap.h  handle_swap_sign_transaction.c
src/token/: README.md  dynamic_token_info.c  dynamic_token_info.h  token_db.c  token_db.h
src/transaction/: deserialize.c  deserialize.h  serialize.c  serialize.h  tx_types.h  types.h  utils.c  utils.h
src/ui/: bagl_display.c  display.c  display.h  menu.c  menu.h  menu_bagl.c  menu_nbgl.c  nbgl_display_address.c  nbgl_display_transaction.c  nbgl_hold_test.c  nbgl_hold_test.h  processing.c  processing.h
src/ui/action/: validate.c  validate.h
tests/: README.md  apdu_cmd.py  boilerplate_cmd.py  conftest.py  requirements.txt  setup.cfg  test_app_mainmenu.py  test_app_press_button.py  test_app_storage.py  test_appname_cmd.py  test_cmd.py  test_error_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_review1.py  test_review2.py  test_sign_cmd.py  test_status_word.py  test_version_cmd.py  usage.md  utils.py
tests/application_client/: README.md  boilerplate_cmd.py  boilerplate_command_sender.py  boilerplate_currency_utils.py  boilerplate_keychain.py  boilerplate_response_unpacker.py  boilerplate_transaction.py  boilerplate_utils.py  pki_client.py  setup.cfg  tlv.py  transaction.py
tests/application_client/keychain/: README.md  dynamic_token.pem
tests/bench/: bench.py  requirements.txt
tests/boilerplate_client/: boilerplate_cmd.py  boilerplate_cmd_builder.py  errors.py  transaction.py  utils.py
tests/elfs/: .your_compiled_apps_go_here
tests/ledgercomm/: README.md  conftest.py  test_sign_cmd.py
tests/ragger/: README.md  conftest.py  test_error_cmd.py
tests/speculos/: README.md  conftest.py  test_error_cmd.py  test_name_version.py  test_sign_cmd.py
tests/standalone/: README.md  requirements.txt  test_app_mainmenu.py  test_appname_cmd.py  test_error_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py  test_sign_token_cmd.py  test_version_cmd.py  usage.md  utils.py
tests/swap/: README.md  _helper_tool.py  cal_helper.py  conftest.py  helper_tool.py  helper_tool_build_dependencies.py  helper_tool_clone_dependencies.py  requirements.txt  setup.cfg  setup_script.py  test_boilerplate.py
tests_swap/: conftest.py  requirements.txt  setup_script.py
unit-tests/: CMakeLists.txt  README.md  gen_coverage.sh  test_base58.c  test_bip32.c  test_format.c  test_tx_parser.c  test_tx_utils.c
(+22 files in other folders)
